[gd_scene load_steps=15 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Networking.gd" type="Script" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]

[sub_resource type="Curve" id=4]
min_value = -1.0
_data = [ Vector2( 0.315217, -0.0911554 ), 0.0, 0.0, 0, 0, Vector2( 0.951087, -0.218428 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 54.9583 ), 0.0, 0.0, 0, 0, Vector2( 1, -134.466 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.306298 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
min_value = 10.0
max_value = 235.67
_data = [ Vector2( 0, 171.396 ), 0.0, 0.0, 0, 0, Vector2( 1, 235.67 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
trail_size_modifier = SubResource( 11 )
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
direction = Vector3( -10, -18, 0 )
spread = 20.0
gravity = Vector3( 0, 150, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 7 )
damping = 1.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 9 )
color = Color( 0.882353, 0.427451, 0.0823529, 1 )
hue_variation_random = 1.0
hue_variation_curve = SubResource( 5 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.77
bounce = 0.3

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 21.5 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -24, -56 )

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_left = 977.0
margin_top = 563.0
margin_right = 1017.0
margin_bottom = 572.0
rect_rotation = 45.0
color = Color( 0.0627451, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
margin_left = 966.0
margin_top = 588.0
margin_right = 1006.0
margin_bottom = 600.0
color = Color( 0.0627451, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="Node2D"]
position = Vector2( 986, 585 )
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 12 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 533, 593 )
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 0, 11.5 )
scale = Vector2( 60, 1 )
shape = SubResource( 2 )

[node name="Floor4" type="StaticBody2D" parent="."]
position = Vector2( 473, -12 )
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor4"]
scale = Vector2( 60, 1 )
shape = SubResource( 2 )

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2( -11, 330 )
rotation = 1.5708
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
scale = Vector2( 60, 1 )
shape = SubResource( 2 )

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2( 1036, 344 )
rotation = 1.5708
physics_material_override = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3"]
scale = Vector2( 60, 1 )
shape = SubResource( 2 )

[node name="Networking" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Viewport" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Viewport/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Viewport/MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 19.0
grow_horizontal = 0
theme = ExtResource( 1 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Viewport/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 868.0
margin_top = 1.0
margin_right = 914.0
margin_bottom = 18.0
grow_horizontal = 0
text = "Test"

[node name="Reconnect" type="Button" parent="Viewport/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 918.0
margin_right = 1024.0
margin_bottom = 19.0
text = "Reconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Viewport/MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 1024.0
margin_bottom = 50.0
grow_horizontal = 0
theme = ExtResource( 1 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Viewport/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 832.0
margin_right = 974.0
margin_bottom = 27.0
focus_neighbour_right = NodePath("../Button")
focus_next = NodePath("../Button")
theme = ExtResource( 1 )
max_length = 50
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Viewport/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 978.0
margin_right = 1024.0
margin_bottom = 27.0
focus_neighbour_left = NodePath("../LineEdit")
focus_next = NodePath("../LineEdit")
theme = ExtResource( 1 )
text = "Send"

[node name="Chats" type="Node2D" parent="."]

[connection signal="received_chat_message" from="Networking" to="." method="_on_Networking_received_chat_message"]
[connection signal="pressed" from="Viewport/MarginContainer/VBoxContainer/HBoxContainer3/Reconnect" to="." method="_on_Reconnect_pressed"]
[connection signal="pressed" from="Viewport/MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
